--- a/about.html
+++ b/about.html
@@ -64,9 +64,10 @@
     </nav>
 </section>
 
-<section class="extСontent cid-sc4YZuh0MU" id="extContent9-4">
+<section class="extСontent cid-sc4YZuh0MU mbr-parallax-background" id="extContent9-4">
     
-    
+    <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(250, 250, 250);">
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-lg-6 title-col m-auto align-left">
@@ -108,7 +109,7 @@
         <div class="card">
             <div class="card-wrapper">
                 <div class="row align-items-center">
-                    <div class="col-12 col-md-3">
+                    <div class="col-12 col-md-4">
                         <div class="image-wrapper">
                             <img src="assets/images/lyons-headshot-506x506.jpg" alt="">
                         </div>
@@ -158,9 +159,9 @@
         <div class="card">
             <div class="card-wrapper">
                 <div class="row align-items-center">
-                    <div class="col-12 col-md-3">
+                    <div class="col-12 col-md-4">
                         <div class="image-wrapper">
-                            <img src="assets/images/dunn-800x600-506x379.jpg" alt="">
+                            <img src="assets/images/dunn-800x600-1-506x379.jpeg" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md">
@@ -384,7 +385,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VA3+1eanYyP0ZK8+9C5PwlRSkm0osy1BG7Qvb3/tJ8EYXj+WRicAn7lkqD+EZ514GqQgI79Hn6xG3XYe+vAi3wbt54C/wX/FUelo4wLbJElLEJOf0zCBh4Qp6m6a81zB">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="o+gbutDLyWPtBZiEW7TD1JSI+UUeZ5ptvNJhdc8xJ8d1x2QxEm8Ffiv1oGu13qZKq7EW4YwIj/MgNmBLk0aY6eRRtrKld/9+n69wMn/DJShePBJHbcFb25bbr7TNtoex">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -532,6 +533,7 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/formstyler/jquery.formstyler.js"></script>
   <script src="assets/formstyler/jquery.formstyler.min.js"></script>
   <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>
