--- a/fellowship.html
+++ b/fellowship.html
@@ -78,8 +78,9 @@
                 <div class="card-wrapper">
                     <h6 class="card-title mbr-fonts-style mb-4 display-2"><em>
                         Research Fellowships</em></h6>
-                    <p class="mbr-text mbr-fonts-style display-7">In partnership with OUR SPONSOR(S), Women in Measurement, Inc. is proud to be able to offer research fellowships to support outstanding research that explores the intersection of race, gender, and educational measurement. Fellowship appointments include an award of $2,500.&nbsp;<br><br><strong>PROPOSAL DEADLINE: June 31, 2021</strong></p>
-                    <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="#"><span class="icon54-v1-document-file mbr-iconfont mbr-iconfont-btn"></span>Download Proposal Submission Guidelines</a></div>
+                    <p class="mbr-text mbr-fonts-style display-7">In partnership with OUR SPONSOR(S), Women in Measurement, Inc. is proud to be able to offer a research fellowship program to support outstanding research that explores the intersection of race, gender, and educational measurement. <br><br>Fellowship appointments include an award of $2,500.&nbsp;<br><br><strong>PROPOSAL DEADLINE: June 31, 2021
+</strong><br><br>Please submit proposals and inquiries to <a href="mailto:fellowship@womeninmeasurement.org" class="text-primary">fellowship@womeninmeasurement.org</a><br><strong></strong></p>
+                    <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="assets/files/Women-inMeasurementResearchFellowshipProposalGuidelines.pdf" target="_blank"><span class="icon54-v1-document-file mbr-iconfont mbr-iconfont-btn"></span>Download Proposal Submission Guidelines</a></div>
                 </div>
             </div>
             <div class="col-12 col-lg-6">
@@ -157,7 +158,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="d6yzLPQcUNkW8jryLXLxaeMoZFdgzcRZrVzR8z9rqm+xKcD4ZN+XuzKrKiGgfzBINPCWx39TSnNRqrs323Si4k2MjxF1gAqL9Q+wLZmtryQnDjX69Q7QWkH0kLPSTfHa">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="valEkx8falFHZE1BSdLR1jiw0pJ/UcsJwooyKrfaCjN8OXraDfToMEocZyGFmehtTgQgTYV8/VXTUbloVlLMWypiHWpHT+OKRepn1LElwnwvbKCr8c+9CDUponcXixiM">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
