--- a/fellowship.html
+++ b/fellowship.html
@@ -54,10 +54,10 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">
-                            About Us</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page4.html#features19-15">
-                            Research Fellows</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Programming</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page3.html#header6-w">
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="about.html">
+                            About Us</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="fellowship.html">
+                            Research Fellows</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="programs.html">Programming</a></li>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="partners.html">
                             Our Partners</a></li></ul>
                 
                 
@@ -158,7 +158,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WBs+v2OnP4PSY47lXwFK0zyh3upaaJ0U1IhV+BIYhK618KXIqsrT2nM//Z0m8QpM4AizVh1pV+SuRBxdcUWkEkQr4yHJgUaVlnFMKUssIkGOuQfdfEjL3giCyE6ZI+C2">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7g66zlibup06XdXf1/tskRXOlGaBf9WPp3xAI1knQmI5vUfKu4MLTE5k06HgfrtM2g2DEnF/KyUiNZdt9qyMioZMRsaMXgPWk5DaQ677gIYRFd/PreMneJA8KjMwKrl2">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
