--- a/programs.html
+++ b/programs.html
@@ -57,10 +57,10 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">
-                            About Us</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page4.html#features19-15">
-                            Research Fellows</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Programming</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page3.html#header6-w">
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="about.html">
+                            About Us</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="fellowship.html">
+                            Research Fellows</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="programs.html">Programming</a></li>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="partners.html">
                             Our Partners</a></li></ul>
                 
                 
@@ -138,7 +138,7 @@
         <div class="row">
             <div class="col-lg-6 mx-auto mbr-form form-col order-2 md-pt md-pb" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ObUi6YkGVSECfvtYJVztIMqszLGmhbbxHpmBwTmlEBWPFc9dK8YKnB6krxu2pzWLECGh8m+mpV8IMVp/M431e98WL5OjGf6VX5Xiz7F8iHU4NkaSgmugQuUakqrLQIsU">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="m+Mei5jL4fdeU6Ttmcf5ybXAp6Q1pLDBRKLhxLzTE1kIKjgIAf+dDMohs0UdpjqqPXMzzQf2xd9z2eg0lcBRotb4eHpcWz1R+hf+Iw//N9AfzfU1bfqPwfcM5Iumrg5c">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You've been added to our list, we will send you more information when it is available. Thank you!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -255,7 +255,7 @@
                     <div class="bg"></div>
                     <div class="form-wrap" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jxoAro6+ZxrllukP6n/q/w0Morq8c5Be24erByV6TrT5FzZ7GPQH1KmirNHEGwIMq/ryWU6jJ3EwMx0/zSMoDbBa71ScgWsZkQ8GRuFZVnyLrF/qNSs5FChwUZ0j7iM3">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VVHg5I1AFiFsVv0ThEtF0fBaTt/EevfZjFhTgrfCd00Od6QeOLmJm70gEwhlB4IgtEIop03CgHXD9UMR7Zg56WKsLu5YsTnUwzouFp+LR74gVJvI7b4MX7xhB3vsdWEn">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list! More details to come.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -368,7 +368,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6Fxxb1cLPGzeuwH6bTenKWdAJYQbui4YUN2OyfzXx0DC2LZJeTg+wFDeirslr62CO+bHSFCvvBWLrDSN7EeDYI3Y7G1nExIvKb5d/CGeX0clkQSUKtoU+8wr9lFsiSvc">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KyG62vQaJAcdYD3xtebml44YiRsnOBwfumTbQyTA/UFMV9j+v8wBXmNuN30hNY3jzxNDx4oZ5SFtkRS4Z/AMk5//ZqOD6FolF3c+vVgJd58i2bsO5Sb4ao2rlSJjC5oT">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
