--- a/about.html
+++ b/about.html
@@ -52,10 +52,10 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">
-                            About Us</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page4.html#features19-15">
-                            Research Fellows</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Programming</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page3.html#header6-w">
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="about.html">
+                            About Us</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="fellowship.html">
+                            Research Fellows</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="programs.html">Programming</a></li>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="partners.html">
                             Our Partners</a></li></ul>
                 
                 
@@ -385,7 +385,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kHMVo3U0t9fGWsTDQ9lwoS86sIOr9tV7Ec6/RHlrD3Ap6jyxdr+17zCK8gGt7cHdi9LofKN94QrRcOU+3K1SFb57sP6NWGQxc1B5r/wTzkKDDlDVHELakPOU25Ljmh+a">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SUo9OL76UOW7H2QNv4YDpPwV3pcZm+10LBzDin7NPoKkybqmr2Vsxn4fiewUEO64jGUAYERZh108xCziPbAViTzDofxL2cwL84eJHlM+5jaU3SKktVAt6wLbwIBFV3Qh">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
