--- a/partners.html
+++ b/partners.html
@@ -52,10 +52,10 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">
-                            About Us</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page4.html#features19-15">
-                            Research Fellows</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Programming</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page3.html#header6-w">
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="about.html">
+                            About Us</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="fellowship.html">
+                            Research Fellows</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="programs.html">Programming</a></li>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="partners.html">
                             Our Partners</a></li></ul>
                 
                 
@@ -148,7 +148,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RSa/zfJBYqfNixXcBwBOduwkfa5A8TrY+43NWN0QlZGAEWFvGokYv7Zru/whJgH8Z1EKOiFrejaRmF1hBr10yJDzyrNzf8Sgjayr9lhhMMD97CT9GXFqaqJQb3aBwPZc">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VP0Vkad6H1cXVbYnRrGaBx8n8rEsUbCgVumuWFujTwZVmIq6aR52pUpc5eoLo5rLIAtVl/rcUG7tIJcsbCjT4F/ZowkuvkJLeCZcCc7wULZEIz3mpED8LK8Cy339OOj5">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
