--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
                             <h6 class="mbr-fonts-style mb-3 display-4">
                                 <strong>Executive Director</strong></h6>
                             <p class="mbr-text mbr-fonts-style display-7">
-                                Susan is an independent consultant who works with states, districts, testing companies, and educational non-profits to improve practice in educational assessment and school accountability. Susan has particular interest in understanding the role of assessment in replicating patterns of privilege and oppression and in leveraging the power of assessment to interrupt systemic inequities. Susan's work ranges from the design and use of classroom assessments to re-imagining large-scale testing and accountability. In addition to her consulting work, Susan holds a part-time faculty a040ppointment at Boston College.
+                                Susan is an independent consultant who works with states, districts, testing companies, and educational non-profits to improve practice in educational assessment and school accountability. Susan has particular interest in leveraging the power of assessment to interrupt systemic inequities. Susan's work ranges from the design and use of classroom assessments to re-imagining large-scale testing and accountability. In addition to her consulting work, Susan holds a part-time faculty appointment at Boston College.
                             </p>
                             <div class="social-row display-7">
                                 <div class="soc-item">
@@ -385,7 +385,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SUo9OL76UOW7H2QNv4YDpPwV3pcZm+10LBzDin7NPoKkybqmr2Vsxn4fiewUEO64jGUAYERZh108xCziPbAViTzDofxL2cwL84eJHlM+5jaU3SKktVAt6wLbwIBFV3Qh">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mxeT0OfDb2isEhL/mHtbFbEG42ttwSd3RyxFdYRRB7d/0xjLL7yc4gnxRP/UVzJQudDzelOEna8ypenOWdwTO3my9se1S3HQFs+t2sptQEuC++MQUMTRqqaHtPz6/QuD">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
