--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RSRNuaoH84hJWz5mvWifAZ6OrgUpEpvayJZ0p21HCM+l2Mynfj4tmDz4pUwm50NVZ+KdBSyAHc/u+Mf5SDqPqUBxOy/8SNAaZ0oL5VQgQ3bSrsfrAgEBBJq9GZYez7Y1">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="poKXG8GRmsy5fsysT7ZcJaV3s8iZYSpfE9Yi2PFYmU+BchAFs/qe2xCJVQLyrfvmkOtGg0Blwu+FoRK6Px24GZ4tcn8BsQQzsRn60mXPC3MA/hFnxuxikzuWlwwt0o+j">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -184,7 +184,7 @@
 
                 <div class="modal-body">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        Women in Measurement, Inc. stands with the Black Lives Matter movement. The fight against racism must be pursued in every aspect of our society. Women in Measurement, Inc. was founded with the mission of advancing racial and gender equity in the field of educational measurement.&nbsp;&nbsp;</p>
+                        Women in Measurement, Inc. stands with the Black Lives Matter movement. The fight against racism must be pursued in every area of our society. Women in Measurement, Inc. was founded with the mission of advancing racial and gender equity in the field of educational measurement.&nbsp;&nbsp;</p>
 
                     <div>
                         <div class="card-img mbr-figure">
