--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/wim-logofb-favicon-128x63.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="The mission of Women in Measurement, Inc. is to support the advancement of women in educational measurement. ">
   
   
   <title>About Us</title>
@@ -30,6 +30,20 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WGLYCDF4SM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WGLYCDF4SM');
+</script>
+<!-- /Analytics -->
+
+
   
   <section class="menu menu2 cid-selJrJlxZI" once="menu" id="menu2-1l">
     
@@ -385,7 +399,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nSQxEBlls/stjKPyuuXfOBIWOc6ewPZe1NB8WzQvk4obVy8sIj4oFufxhuaQtc63PEmP8neCsSICF2XQ4O7ZGEtPXNn8XGB6ybpyyPOEafxzDNwx0hQ/tRUu4gXCmX7w">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Nha/hLZua9czxDrmFs70iNqggJQ8Z9JXKm3OCGLHqG2oJoLYOsuc+/ecpXoJTDonaG08FWP3Utbb930z///t6zKmt+1ZRNeDlVZdNMs+hftHIAmBx3MHiCpXYjqCUj70">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
