--- a/fellowship.html
+++ b/fellowship.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/wim-logofb-favicon-128x63.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Women in Measurement, Inc. is proud to be able to offer a research fellowship program to support outstanding research that explores the intersection of race, gender, and educational measurement. ">
   
   
   <title>Research Fellows</title>
@@ -32,6 +32,20 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WGLYCDF4SM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WGLYCDF4SM');
+</script>
+<!-- /Analytics -->
+
+
   
   <section class="menu menu2 cid-selJrJlxZI" once="menu" id="menu2-1l">
     
@@ -158,7 +172,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GkAD5rjtLf6Qi7x+Ne4dFhskHsEUiFYrPIdycdaOzeRtHVDkEGDrVXLGi7Hko/skEWHLu1JT0sml+yc5kYMzj0KPKKgI9VogZl4/HQuVHiBcKscb/1ZT0iOSVVYvp9Vl">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WBsIObuowrE6UwVxh460jP/eQB/EgSyPZD+ykZ18ijr8M/ITqZlJQOt8WIbeZSNDX3t7IrkKkM2WS+1iELzbNz5qo9PLyfkEeTwLx5BrWS/8UgDWy8V0Oxiyum3qJOuv">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
