--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/wim-logofb-favicon-128x63.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="A non-profit organization dedicated to the advancement of women--and female minorities in particular--in the field of educational measurement. ">
   
   
   <title>Home</title>
@@ -30,6 +30,20 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WGLYCDF4SM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WGLYCDF4SM');
+</script>
+<!-- /Analytics -->
+
+
   
   <section class="menu menu2 cid-selJrJlxZI" once="menu" id="menu2-1l">
     
@@ -149,7 +163,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="poKXG8GRmsy5fsysT7ZcJaV3s8iZYSpfE9Yi2PFYmU+BchAFs/qe2xCJVQLyrfvmkOtGg0Blwu+FoRK6Px24GZ4tcn8BsQQzsRn60mXPC3MA/hFnxuxikzuWlwwt0o+j">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7DxoDvVqVm0CFxTyly6z/8ikwLXAbmxftanqvGN0pk0sCv5joJwr9IvQfKDfuG1bEjjvtMNm02D9JykzsaSINdzNDPl2BCvQjAcb7eDNpQ4sTEloGhl3L+znrvm4cwhm">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
