--- a/partners.html
+++ b/partners.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/wim-logofb-favicon-128x63.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Our partner organizations support the mission and programming of Women in Measurement, Inc. ">
   
   
   <title>Our Partners</title>
@@ -30,6 +30,20 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WGLYCDF4SM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WGLYCDF4SM');
+</script>
+<!-- /Analytics -->
+
+
   
   <section class="menu menu2 cid-selJrJlxZI" once="menu" id="menu2-1l">
     
@@ -148,7 +162,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Mtf2l4EEvsA2XOlmjmSQFbeJj74ZiYR2WDhBwXcTunNX1sNnQ86zzgKkfpah20JYgd1mZOMH3sUgKTCt6DrAjnbFM2kFsFzcVj0JOAjMNJwVZB0HSMnwaL43Gq4S39KC">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UAepN0TddsYHmAvFBH5zYm7Lpu0328h4P+wUaGPHHhHNpwz0d7lrBp55Y4sApjWDU3MpgWYOsBmAA6sIMsh2TsvxN50YyYWX9ToJmqnvDNn8zL4XOQ1wJXVdCi0vCUg0">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
