--- a/programs.html
+++ b/programs.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/wim-logofb-favicon-128x63.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Women in Measurement, Inc. hosts a number of initiatives aimed at advancing the careers of women in educational measurement, with particular focus on supporting women of color in our field.">
   
   
   <title>Programming</title>
@@ -35,6 +35,20 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WGLYCDF4SM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WGLYCDF4SM');
+</script>
+<!-- /Analytics -->
+
+
   
   <section class="menu menu2 cid-selJrJlxZI" once="menu" id="menu2-1l">
     
@@ -138,7 +152,7 @@
         <div class="row">
             <div class="col-lg-6 mx-auto mbr-form form-col order-2 md-pt md-pb" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="XpwfmAG++Vf5ZO5KLlXKz2kDhQlYf0dcEc4ZTp8qAx4uiG9O3AkJO1rtcM4MO8TvqbJ/TakMlxxqsMoL13YaKseCUNmqj+N+OehIUWeVz5fCRNcpWiE0ThV4mCrV3+9H">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bV/Z4ETUiaFJ8GNtsrF7X5B17P8dNYv/F1fiz8UuvNvF4Rco16WUbQMTDsgWvmcmDHPynaab7ntaiF2h1Ky8iAIxBpdxC71w+IZgCBlHMVZ7r+1Vjhyc5B7vPG1QDaqH">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You've been added to our list, we will send you more information when it is available. Thank you!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -255,7 +269,7 @@
                     <div class="bg"></div>
                     <div class="form-wrap" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LdsFMaQ5isQg+6bV9mBF9ECsV1UI2XYXok7iKxnUSpkqX58ZbWouyddn+CuFCJcL6MdUFktq2C3yZq1BJDKzKjredKc8isllZBVsR09czesZcKwaOBTNmsdOKQiI+LuG">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wgoMwv3CYGXKZSYr7dfvmLCDFVlOudJxW9M4/ah1i1rHM6/ISFmNcF/7DlodVE+3qJlFQc8UJ2zM9kaWsEfAH4Bc/HJibzg+2DeCb10MLOA5aNZLieMEtvHpa04gOIRX">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list! More details to come.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -368,7 +382,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eRIGEOX5FhYkSzgcpUdy5pPzaOO5DS7nJiIZdBL4SEN+xT73Es/5o2GV1k17Cka00v7xTgtOpuLNohJMH1x7YjrxpWbKqn+HRuOKYD6kYieGbszUDxhLhr7QnS1wenFQ">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4OR0jwXUMWRR4bUDzFcbjuYeT/iuT5DPMscHJyheSZQUoO+heNUWsOw0dcZ37HPLW3xH6/g1uc3rEFEwq0ByMITGDbrfd5Mq042O2Gaa2Mpt8FPIXF9XY0R0TT6ZbIDl">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
