--- a/about.html
+++ b/about.html
@@ -123,9 +123,9 @@
         <div class="card">
             <div class="card-wrapper">
                 <div class="row align-items-center">
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-3">
                         <div class="image-wrapper">
-                            <img src="assets/images/lyons-headshot-506x506.jpg" alt="">
+                            <img src="assets/images/20201025-img-8856-696x1044.jpeg" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md">
@@ -173,7 +173,7 @@
         <div class="card">
             <div class="card-wrapper">
                 <div class="row align-items-center">
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-3">
                         <div class="image-wrapper">
                             <img src="assets/images/dunn-800x600-1-506x379.jpeg" alt="">
                         </div>
@@ -399,7 +399,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nTW/a35PhiTjPOV0R3dBFN68gtdxv8DVNE3s+YGZAp3LPWj88wowYGqt9CaIOJA8d9tXCax9yfCRtsvP3fYpC5qC/LoUVg+vnl3MPomPjtbQtw/J27X7jKF2iGtcCcLN">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yRpMAsbE8nBDMgioJCatyvL+4LZceKcckcviudgtjx66dmZV8O7jzhFt3xE0tHmkHcYPLWSes57aC7S94DqVEfJCJUUvtMCpV/LDlLfa8WPmspLAEYvfMJ7opa4v4/DW">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
