--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                     
                     <h2 class="mbr-section-title pb-4 mbr-semibold mbr-black mbr-fonts-style display-2"><em>Our Mission</em></h2>
                     <p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">
-                        The mission of Women in Measurement, Inc. is to support the advancement of women in educational measurement. We work to amplify the voices of women--and female minorities in particular--and to provide structures of support for women throughout their careers in academia, industry, non-profits, and the public sector. Women in educational measurement have a long history of leadership and impact. However, there continue to be significant gender and racial disparities in who holds the most influential and highly-regarded positions in our field. Women in Measurement, Inc. seeks to understand and dismantle systems of oppression that have led to disproportionate access and representation at the highest levels of our field. Women in Measurement, Inc. is a non-profit organization that hosts a number of initiatives in service to our mission, which include research fellowships, mentoring opportunities, speaking engagements at professional conferences, networking events, and awards.</p>
+                        The mission of Women in Measurement, Inc. is to support the advancement of women in educational measurement. We work to amplify the voices of women--and minoritized females in particular--and to provide structures of support for women throughout their careers in academia, industry, non-profits, and the public sector. Women in Measurement, Inc. seeks to understand and dismantle systems of oppression that have led to disproportionate access and representation at the highest levels of our field. <br></p>
                 </div>
             </div>
             <div class="col-lg-6 img-col">
@@ -399,7 +399,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qV2gEOetg9qx1llXlxXk2w8bRSzfJ1RdMJrBpPyKVXeLUxrBgARY3APidro2VFeutwLQJu468TPoNmfBLZaVxomkqWG1JSZRKJ0/XuAAoKZECe7SQi8jVCDeCl71+u15">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="T2f36FD0RZewkhDPE09KV86yxxhv/p4v9pGKVSj+q9cN5/iykIFITol6+olzcmJCUfhqdtmw8J2lg1MyIfY/tqUdl20oIqX17M9s4zZUw1ri7KMaPi1EdNA+zU8fN4F/">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
