--- a/fellowship.html
+++ b/fellowship.html
@@ -92,7 +92,7 @@
                 <div class="card-wrapper">
                     <h6 class="card-title mbr-fonts-style mb-4 display-2"><em>
                         Research Fellowships</em></h6>
-                    <p class="mbr-text mbr-fonts-style display-7">In partnership with OUR SPONSOR(S), Women in Measurement, Inc. is proud to be able to offer a research fellowship program to support outstanding research that explores the intersection of race, gender, and educational measurement. <br><br>Fellowship appointments include an award of $2,500.&nbsp;<br><br><strong>PROPOSAL DEADLINE: June 30, 2021
+                    <p class="mbr-text mbr-fonts-style display-7">In partnership with our sponsors, Women in Measurement, Inc. is proud to be able to offer a research fellowship program to support outstanding research that explores the intersection of race, gender, and educational measurement. <br><br>Fellowship appointments include an award of $2,500.&nbsp;<br><br><strong>PROPOSAL DEADLINE: June 30, 2021
 </strong><br><br>Please submit proposals and inquiries to <a href="mailto:fellowship@womeninmeasurement.org" class="text-primary">fellowship@womeninmeasurement.org</a><br><strong></strong></p>
                     <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="assets/files/Women-inMeasurementResearchFellowshipProposalGuidelines.pdf" target="_blank"><span class="icon54-v1-document-file mbr-iconfont mbr-iconfont-btn"></span>Download Proposal Submission Guidelines</a></div>
                 </div>
@@ -172,7 +172,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6iZxq5gP6YKbf3xTR7TOwAgg2z1tMXamLl6Q1Dnb52gz/D2N0GPHWwV3790pauaq07sej4RETAuzbKpNH1bWjWuKtBQnW+ySoC1oOKvV2+0xPIjQIeIXg7mx99c5AosG">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="L1nIoEQDQ3ucwikEodT60iZuOb4lgRIQird0X8GpJuc1ZsWTx25T4MSvkmjveQfOgaTeNHudwD4N1UV3rhdohk4FO4/PqetrazAy7Pgfq4QPMM83pLoRyRuRVYs31OlC">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
