--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="col-12 col-lg-8">
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Women in Measurement, Inc.</strong></h1>
                 
-                <p class="mbr-text mbr-fonts-style display-7">A non-profit organization dedicated to the advancement of women--and female minorities in particular--in the field of educational measurement.&nbsp;</p>
+                <p class="mbr-text mbr-fonts-style display-7">A non-profit organization dedicated to the advancement of women--and minoritized women in particular--in the field of educational measurement.&nbsp;</p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-4" href="about.html">Learn More</a>
                     <a class="btn btn-warning display-4" href="programs.html">Get Involved &gt;</a></div>
             </div>
@@ -163,7 +163,7 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="T1+DLGStWPGOvw1Dfjf87lIc9gFMu6xvRz1ePGVM+nXxcLVGeMeQ6iYGkd+E5ni26cfg/CdtWYNEyXMNrOXk3d0Cqrn3wNgbdWk8fFojGUgTKuCGLl+TwiayLwU8DIH/">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Wadsqf9qy+EZhMIrKTzk4K7I3UjHEZVlQj2d9xs+8kx/ZqUi2crANz8Arq9PaP2ttPUe/BagLNT+Xm2PD8z18aTX4GoHFKS1OXjUEXsxA44F+1jVA5jg1HyfQPmigw0t">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
