--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/shopping-cart/minicart-theme.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
   <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
@@ -30,6 +31,7 @@
   
 </head>
 <body>
+<script>var shopcartSettings = {"shopcart_top_offset":120,"side_offset":20,"site_width":1150,"shopcart_icon_color":"#FFFFFF","shopcart_back_color":"#9365b8","shopcart_icon_size":30,"sc_count_color":"#FFFFFF","sc_count_back_color":"#b8312f","sc_count_size":12,"checkout_button":"Check out with"};</script>
 
 <!-- Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -66,13 +68,14 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="about.html">
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="about.html">
                             About Us</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="fellowship.html">
                             Research Fellows</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="programs.html">Programming</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="partners.html">
                             Our Partners</a></li></ul>
                 
-                
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://www.paypal.com/cgi-bin/webscr?business=susan%40womeninmeasurement.org&cmd=_donations&item-name=Donation&item-number=&currency_code=USD" target="_blank">
+                        Donate</a></div>
             </div>
         </div>
     </nav>
@@ -163,15 +166,15 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Wadsqf9qy+EZhMIrKTzk4K7I3UjHEZVlQj2d9xs+8kx/ZqUi2crANz8Arq9PaP2ttPUe/BagLNT+Xm2PD8z18aTX4GoHFKS1OXjUEXsxA44F+1jVA5jg1HyfQPmigw0t">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter"><input type="hidden" name="email" data-form-email="true" value="uTjm5EKHQ/pvwM41olPAT1mNP6antEgyEsWXMTcXJTo1Z67Uf8Yrm/E3pnwxm40UfgM5Y09eIvYDTkH3wkDA3utWwbw+8bZwXJZkOlM/j9mHzqtq76cffywxQ6IcI9CM">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
 </div>
 </div>
 <div class="dragArea row">
-<div class="col form-group" data-for="email">
-<input type="email" name="email" placeholder="Your e-mail" data-form-field="E-mail" class="form-control display-7" value="" id="email-extFooter25-1f">
+<div class="col form-group" data-for="">
+<input type="email" name="" placeholder="Your e-mail" data-form-field="" class="form-control display-7" value="">
 </div>
 <div class="col-auto mbr-section-btn">
 <button type="submit" class="btn btn-form btn-primary display-4">Subscribe</button>
@@ -224,6 +227,9 @@
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/shopping-cart/minicart.js"></script>
+  <script src="assets/shopping-cart/jquery.easing.min.js"></script>
+  <script src="assets/shopping-cart/minicart-customizer.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/formstyler/jquery.formstyler.js"></script>
   <script src="assets/formstyler/jquery.formstyler.min.js"></script>
@@ -233,7 +239,7 @@
   <script src="assets/popup-overlay-plugin/script.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid.min.js"></script>
-  
+  <script src="assets/shopping-cart/shop-lightbox.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
